--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ contact form created for treehouse competition.
         Send!
       </button>
     </div>
+    <script>
     // When the browser is ready...
   $(function() {
     // validate
@@ -50,6 +51,7 @@ contact form created for treehouse competition.
         }
     });
   });
+  </script>
   </form>
 
   
