--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ contact form created for treehouse competition.
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <title>お問い合わせ</title>
-        <link rel="stylesheet" href="css/stylesheet.css">
+        <link rel="stylesheet" href="stylesheet.css">
 		
     </head>
 <form id="contact">
