--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@ contact form created for treehouse competition.
         }
     });
   });
+$email = 'roadb.42@gmail.com';
+  mb_send_mail($email, $subject, $body, $header);
   </script>
   </form>
 
