--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ contact form created for treehouse competition.
         }
     });
   });
-$email = 'roadb.42@gmail.com';
-  mb_send_mail($email, $subject, $body, $header);
+$to = 'roadb.42@gmail.com';
+  mb_send_mail($to, $subject, $body, $header);
   </script>
   </form>
 
