--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ contact form created for treehouse competition.
 		
     </head>
 <form id="contact">
-    <div class="container">
+    <form action="roadb.42@gmail.com" enctype="text/plain" method="POST"></form>
+	<div class="container">
       <div class="head">
         <h2>Say Hello</h2>
       </div>
@@ -51,8 +52,7 @@ contact form created for treehouse competition.
         }
     });
   });
-$to = 'roadb.42@gmail.com';
-  mb_send_mail($to, $subject, $body, $header);
+
   </script>
   </form>
 
